--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Сайт Маслова</title>
+<meta charset="utf-8">
+<title>NAZVA</title>
 </head>
 <body>
-Добрий день
+  <header>
+    Заголовок - Деякі заголовки йдуть тут.Зазвичай складається с логотипа компанії, рядка тегів і т.д.
+  </header>
+  <h1>Головний заголовок сторінки</h1>
+<section>
+  <h2>Розділ 1</h2>
+</section>
+<footer>
+  <h5>MASLOV</h5>
+</footer>
 </body>
 </html>
