--- a/Zavdannya3.html
+++ b/Zavdannya3.html
@@ -1,2 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+<tittle>Zavdannya3</tittle>
+</head>
+<body>
+  <h1>Моє хоббі</h1>
+  <h2>Баскетбол</h2>
+  <a href="index.html"> <h2>Головна сторінка</h2>
+  <section>
+    <h3>Баскетбол - командний вид спорту, складаєтсья з двох команд по 5 осіб. Гравці повинні закинути м'яч у підвішенний кошик суперника.Є олімпійським видом спорту.</h3>
+ <img src="https://static.ukrinform.com/photos/2023_06/thumb_files/630_360_1686118903-513.jpg" width="550" border="10">
+  </section>
+  <footer>
+    <h4>MASLOV</h4>
+  </footer>
+</body>
+</html>
