--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>NAZVA</title>
+<title>Golovna storinka</title>
 </head>
 <body>
   <header>
-    Заголовок - Деякі заголовки йдуть тут.Зазвичай складається с логотипа компанії, рядка тегів і т.д.
+    Перелік завдань
   </header>
-  <h1>Головний заголовок сторінки</h1>
+  <h1>Роботи</h1>
 <section>
-  <h2>Розділ 1</h2>
+  <a href="Zavdannya3.html"> <h2>Завдання3</h2>
 </section>
 <footer>
   <h5>MASLOV</h5>
