--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
 </head>
 <body>
   <header>
-    Перелік завдань
+   <h1>Мої роботи</h1>
   </header>
-  <h1>Роботи</h1>
+  Перелік завдань
 <section>
   <a href="Zavdannya3.html"> <h2>Завдання3</h2>
 </section>
-<footer>
-  <h5>MASLOV</h5>
-</footer>
 </body>
 </html>
