--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </header>
   Перелік завдань
 <section>
-  <a href="Zavdannya3.html"> <h2>Завдання3</h2>
+  <a href="Zavdannya3.html"> <h2>Завдання3</h2> </a>
 </section>
+<footer>
+  <h5>MASLOV</h5>
+</footer>
 </body>
 </html>
