--- a/Zavdannya3.html
+++ b/Zavdannya3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-<tittle>Zavdannya3</tittle>
+<title>Zavdannya3</title>
 </head>
 <body>
   <h1>Моє хоббі</h1>
@@ -12,7 +12,8 @@
  <img src="https://static.ukrinform.com/photos/2023_06/thumb_files/630_360_1686118903-513.jpg" width="550" border="10">
   </section>
   <footer>
-    <a href="index.html"> <h2>Головна сторінка</h2>
+    <a href="index.html"> <h2>Головна сторінка</h2> </a>
+  <h5>MASLOV</h5>
   </footer>
 </body>
 </html>
