--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header>
    <h1>Мої роботи</h1>
   </header>
-  Перелік завдань
+  <h2>Перелік завдань</h2>
 <section>
   <a href="Zavdannya3.html"> <h2>Завдання3</h2> </a>
 </section>
