--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <header>
    <h1>Мої роботи</h1>
   </header>
-  <h2>Перелік завдань</h2>
+  <h2>Перелік завдань:</h2>
 <section>
   <a href="Zavdannya3.html"> <h2>Завдання3</h2> </a>
 </section>
 <footer>
-  <h5>MASLOV</h5>
+  <p> align="center"> <h5>MASLOV</h5> </p>
 </footer>
 </body>
 </html>
