--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <a href="Zavdannya3.html"> <h2>Завдання3</h2> </a>
 </section>
 <footer>
-  <p align="center"> <h5>MASLOV</h5> </p>
+ <h5>MASLOV</h5> 
 </footer>
 </body>
 </html>
