--- a/Завдання 20.02.2024.html
+++ b/Завдання 20.02.2024.html
@@ -9,18 +9,18 @@
     <h1>Цікаві місця</h1>
   </header>
  <a href"index.html"> <h3>Головна сторінка</h3>
-<ul><h2>Цікаві місця України</h2><
+ <ul><h2>Цікаві місця України</h2>
  <li>Дендропарк Софіївка</li> 
   <li>Києво-Печерська Лавра</li>
   <li>Заповідник Хортиця</li>
-  /ul>
+  </ul>
 <ol><h2>Цікаві місця Кременчука</h2>
 <li>Міський сад</li>
 <li>Придніпровський парк</li>
   <li>Парк Миру</li>
 </ol>
 <footer>
-  <h5> align="center">&#169MASLOV</h5>
+  <h5>align="center">&#169MASLOV</h5>
 </footer>
 </body>
 </html>
