--- a/Завдання 20.02.2024.html
+++ b/Завдання 20.02.2024.html
@@ -8,7 +8,7 @@
   <header>
     <h1>Цікаві місця</h1>
   </header>
- <a href"index.html"> <h3>Головна сторінка</h3>
+ <a href"index.html"> <h3>Головна сторінка</h3></a>
  <ul><h2>Цікаві місця України</h2>
  <li>Дендропарк Софіївка</li> 
   <li>Києво-Печерська Лавра</li>
