--- a/Завдання 20.02.2024.html
+++ b/Завдання 20.02.2024.html
@@ -20,7 +20,7 @@
   <li>Парк Миру</li>
 </ol>
 <footer>
-  <h5> align="center">&#169MASLOV</h5>
+  <h5 align="center">&#169MASLOV</h5>
 </footer>
 </body>
 </html>
