--- a/Zavdannya3.html
+++ b/Zavdannya3.html
@@ -13,7 +13,7 @@
   </section>
   <footer>
     <a href="index.html"> <h2>Головна сторінка</h2> </a>
-  <h5>MASLOV</h5>
+ <h5 align="center">&#169MASLOV</h5>
   </footer>
 </body>
 </html>
