--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="Завдання 20.02.2024.html"> <h2>Завдання 20.02.2024</h2> </a>
 </section>
 <footer>
- <h5>MASLOV</h5> 
+ <h5 align="center">&#169MASLOV</h5> 
 </footer>
 </body>
 </html>
